--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,80 @@
-* {
-  box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Exo:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Parkinsans:wght@300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+.comic-neue-light {
+  font-family: "Comic Neue", cursive;
+  font-weight: 300;
+  font-style: normal;
 }
 
-body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
-  color: black;
-  background-color: white;
+body{
+  background-color: black;
+    margin: 0; 
+    padding: 0; 
+    font-family: Comic Neue, sans-serif; 
+} 
+ 
+.container { 
+  display: flex; 
+  flex-direction: column; /* Change to row for horizontal layout */ 
+  justify-content: center; /* Center items vertically */ 
+  align-items: center; /* Center items horizontally */ 
+  height: 100vh; 
+} 
+
+nav a{
+list-style-type: none;
+color: white ;
+font-family: Comic Neue;
+font-weight: 500;
+margin-top: 0px;
+text-decoration: none;
+
 }
 
-nav {
-  display: flex;
-  flex-wrap: wrap;
+nav li{
+
+  float: right;
+  padding: 10px;
+  
+}
+
+nav a:hover{
+color: rgb(152, 178, 255);
+
+}
+
+
+img{
+  height: 20px;
+  width: 150px;
+  padding: 0%;
+  margin-top: 0.3cm;
+
+}
+
+header{
+  margin-top: 0px;
+  padding-top: 0px;
   align-items: center;
-  justify-content: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  border-bottom: solid 1px #aaa;
-  background-color: #eee;
+  justify-content: flex-start;
 }
 
-nav a {
-  display: inline-block;
-  min-width: 9rem;
-  padding: 0.5rem;
-  border-radius: 0.2rem;
-  border: solid 1px #aaa;
-  text-align: center;
-  text-decoration: none;
-  color: #555;
+nav{
+  margin-top: 0px;
+  padding-top: 0px;
 }
 
-nav a[aria-current='page'] {
-  color: #000;
-  background-color: #d4d4d4;
+h1{
+  color: white;
+}
+#loop {
+  position: fixed;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
 
-main {
-  padding: 1rem;
-}
-
-h1 {
-  font-weight: bold;
-  font-size: 1.5rem;
+h3{
+  margin:0px;
+  padding:0.0px;
 }
